--- a/LazyStackVsExt/LazyStackVsExt.csproj
+++ b/LazyStackVsExt/LazyStackVsExt.csproj
@@ -45,6 +45,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AwsSettings.cs" />
+    <Compile Include="GetAWSResources.cs" />
+    <Compile Include="GetStackNameDialog.xaml.cs">
+      <DependentUpon>GetStackNameDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="LazyStack_Generate_Projects.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -61,7 +66,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ProjectTemplates\LazyStackWebApi Template.zip">
+    <Content Include="ProjectTemplates\LazyStackAuth.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="ProjectTemplates\LazyStackDevUtil.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="ProjectTemplates\LazyStackWebApi.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
@@ -83,6 +96,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AWSSDK.CloudFormation">
+      <Version>3.3.106.21</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.205" ExcludeAssets="runtime" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.6.2058" />
   </ItemGroup>
@@ -96,6 +112,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Resources\GetAWSResources.png" />
     <Content Include="Resources\LazyStack___Generate_Projects.png" />
     <Content Include="Resources\ToolWindow1Command.png" />
   </ItemGroup>
@@ -106,6 +123,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="GetStackNameDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="LazyStackLogToolWindowControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
