--- a/LazyStack/Templates/LazyStack.yaml
+++ b/LazyStack/Templates/LazyStack.yaml
@@ -1,19 +1,37 @@
 ﻿#LazyStack.yaml Defaults file
-ProjectGenerationOptions:
-  ClientSDKProjectOpenApiGenerationOptions:
-    aspnetcoreVersion: "3" 
-    targetFramework: "netcoreapp3.1"
+ProjectOptions:
+  ReferenceApiProjects:
+    OpenApiGeneratorOptions:
+      aspnetCoreVersion: "3.1"
+      buildTarget: "library"
+      isLibrary: "true"
+      operationIsAsync: "true"
+      operationResultTask: "true"
 
-  ApiProjectOpenApiGenerationOptions:
-    aspnetCoreVersion: "3.1"
+    PackageReferences:
+      Microsoft.AspNetCore.Mvc.NewtonsoftJson: "3.0.0"
+      Microsoft.Extensions.Configuration.Json: "3.1.0"
+      Swashbuckle.AspNetCore: "5.6.2"
 
-  ClientSDKProject:
+  ClientSDKProjects:
     PackageReferences:
       AwsSignatureVersion4: "1.3.1"
       System.ComponentModel.Annotations: "4.5.0"
+      JsonSubTypes: "1.5.2"
+      Newtonsoft.Json: "12.0.3"
 
-  LambdaProject:
+    OpenApiGeneratorOptions:
+      aspnetCoreVersion: "3" 
+      targetFramework: "netcoreapp3.1"
+      netCoreProjectFile: "true"
+
+  LambdaProjects:
+    CodeUriTarget: "bin/Release/netcoreapp3.1"
     PackageReferences:
-      AWSSDK.S3: "3.3.110.58"
-      AWSSDK.Extensions.NETCore.Setup: "3.3.100.1"
+      AWSSDK.Extensions.NETCore.Setup: "3.3.101"
       Amazon.Lambda.AspNetCoreServer: "5.1.0"
+
+  WebApiProjects:
+    PackageReferences:
+      AWSSDK.Extensions.NETCore.Setup: "3.3.101"
+      Swashbuckle.AspNetCore: "5.6.2"
