--- a/LazyStackApp/LazyStackApp.csproj
+++ b/LazyStackApp/LazyStackApp.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Core" Version="3.5.1.48" />
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
   </ItemGroup>
 
