Removed MethodMap from AwsSettings and generating new MethodMap class.

--- a/LazyStack/LazyStack.csproj
+++ b/LazyStack/LazyStack.csproj
@@ -27,6 +27,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
    
+    <None Update="Templates\ClientSDK\MethodMap.cs.tpl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+   
     <None Update="Templates\Controllers\FakeEntryPoint.cs.tpl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
