Updated LazyStackAuth tests. Fixed microsoft encoding bug in LzHttpClient. Updated JsonSubTypes to12.0.3 . Added LazyStack.yaml SchemaProjects project options. Changed naming converntions of AwsSettings.json file. Added MethodMap.cs (moved out of confit into class).

--- a/LazyStack/Templates/LazyStack.yaml
+++ b/LazyStack/Templates/LazyStack.yaml
@@ -16,11 +16,15 @@ ProjectOptions:
   ClientSDKProjects:
     PackageReferences:
       System.ComponentModel.Annotations: "5.0.0"
-      JsonSubTypes: "12.0.3"
+      JsonSubTypes: "1.8.0"
       Newtonsoft.Json: "12.0.3"
 
     ProjectReferences:
       - ..\LazyStackAuth\LazyStackAuth.csproj
+
+  SchemaProjects:
+    PackageReferences:
+      Newtonsoft.Json: "12.0.3"
 
   LambdaProjects:
     CodeUriPlatform: "netcoreapp3.1"
