if no default region configured, AmazonCloudFormationClient throws e, fixed

--- a/LazyStack/Properties/launchSettings.json
+++ b/LazyStack/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "LazyStack": {
       "commandName": "Project",
+      "commandLineArgs": "Settings",
       "workingDirectory": "C:\\Users\\tmay\\source\\repos\\PetStore"
     }
   }
