introduced Stacks\env folders. Improved project handling in extension. Fixed a few bugs.

--- a/LazyStack/Properties/launchSettings.json
+++ b/LazyStack/Properties/launchSettings.json
@@ -1,9 +1,7 @@
 {
   "profiles": {
     "LazyStack": {
-      "commandName": "Project",
-      "commandLineArgs": "Settings",
-      "workingDirectory": "C:\\Users\\tmay\\source\\repos\\PetStore"
+      "commandName": "Project"
     }
   }
 }
