--- a/LazyStackAuthTests/LazyStackAuthTests.csproj
+++ b/LazyStackAuthTests/LazyStackAuthTests.csproj
@@ -6,6 +6,22 @@
     <IsPackable>false</IsPackable>
 
     <UserSecretsId>65c9d090-81bb-444b-b68f-62baa382a22e</UserSecretsId>
+
+    <Copyright>Copyright (c) 2021, Insight Sciences Corporation. All rights reserved.</Copyright>
+
+    <Authors>Tim May, Thomas May</Authors>
+
+    <Company>Insight Sciences Corporation</Company>
+
+    <Description>Test suite for LazyStackAuth library.</Description>
+
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+
+    <PackageProjectUrl>https://lazystack.io</PackageProjectUrl>
+
+    <RepositoryUrl>https://github.com/InSciCo/LazyStack</RepositoryUrl>
+
+    <RepositoryType>GitHub</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,6 +40,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LazyStackAuth\LazyStackAuth.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
