--- a/LazyStackAuth/LazyStackAuth.csproj
+++ b/LazyStackAuth/LazyStackAuth.csproj
@@ -12,6 +12,8 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Company>Insight Sciences Corporation</Company>
     <Authors>Tim May, Thomas May</Authors>
+    <SignAssembly>false</SignAssembly>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +27,7 @@
   <ItemGroup>
     <EmbeddedResource Include="AuthMessages.json" />
   </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="MailKit" Version="2.10.1" />
     <PackageReference Include="AwsSignatureVersion4" Version="1.4.0" />
@@ -36,5 +39,18 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
     <PackageReference Include="Amazon.Extensions.CognitoAuthentication" Version="2.0.3" />
   </ItemGroup>
+  
+  <!-- Note: The signing step will not execute if the CertPassword.csproj file doesn't exist and contan a non-empty SIGN_CERT_HASH string -->
+  <Import Project="..\..\LazyStackCertificate\CertPassword.csproj" />
+
+  <PropertyGroup>
+    <NugetSignCommand>$(MSBuildProjectDirectory)\..\..\LazyStackCertificate\nuget sign -CertificateFingerprint $(SIGN_CERT_HASH) -Timestamper http://timestamp.digicert.com</NugetSignCommand>
+  </PropertyGroup>
+
+  <Target Name="SignPackage" AfterTargets="Pack" Condition="'$(Configuration)' == 'Release' AND '$(SIGN_CERT_HASH)' != ''">
+    <Message Importance="High" Text="hello" />
+    <Message Importance="High" Text="PackageVersion $(Version)" />
+    <Exec Command="$(NugetSignCommand) $(MSBuildProjectDirectory)\bin\Release\$(MSBuildProjectName).$(PackageVersion).nupkg" />
+  </Target>
 </Project>
  
