Fix for region - extract from profile to use with creds

--- a/LazyStackGetSettings/Properties/launchSettings.json
+++ b/LazyStackGetSettings/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "LazyStackGetAwsSettings": {
       "commandName": "Project",
-      "commandLineArgs": "PetStoreDev -m"
+      "commandLineArgs": "PetStore -n T2DevJoe"
     }
   }
 }
