--- a/LazyStackAuth/LazyStackAuth.csproj
+++ b/LazyStackAuth/LazyStackAuth.csproj
@@ -39,10 +39,10 @@
     <PackageReference Include="Amazon.Extensions.CognitoAuthentication" Version="2.2.1" />
   </ItemGroup>
   
-  <!-- Note: The signing step will not execute if the CertPassword.csproj file doesn't exist and contan a non-empty SIGN_CERT_HASH string -->
-  <Import Project="..\..\LazyStackCertificate\CertPassword.csproj" />
+  <!-- Note: The signing step will not execute if the CertPassword.csproj file doesn't exist and contain a non-empty SIGN_CERT_HASH string -->
+  <Import Project="..\..\LazyStackCertificate\CertPassword.csproj"  Condition="'$(Configuration)' == 'Release' AND '$(SIGN_CERT_HASH)' != ''"/>
 
-  <PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'Release' AND '$(SIGN_CERT_HASH)' != ''">
     <NugetSignCommand>$(MSBuildProjectDirectory)\..\..\LazyStackCertificate\nuget sign -CertificateFingerprint $(SIGN_CERT_HASH) -Timestamper http://timestamp.digicert.com</NugetSignCommand>
   </PropertyGroup>
 
