--- a/LazyStackDynamoDBRepo/LazyStackDynamoDBRepo.csproj
+++ b/LazyStackDynamoDBRepo/LazyStackDynamoDBRepo.csproj
@@ -27,10 +27,10 @@
     </None>
   </ItemGroup>
 
-  <!-- Note: The signing step will not execute if the CertPassword.csproj file doesn't exist and contan a non-empty SIGN_CERT_HASH string -->
-  <Import Project="..\..\LazyStackCertificate\CertPassword.csproj" />
+  <!-- Note: The signing step will not execute if the CertPassword.csproj file doesn't exist and contain a non-empty SIGN_CERT_HASH string -->
+  <Import Project="..\..\LazyStackCertificate\CertPassword.csproj"  Condition="'$(Configuration)' == 'Release' AND '$(SIGN_CERT_HASH)' != ''"/>
 
-  <PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'Release' AND '$(SIGN_CERT_HASH)' != ''">
     <NugetSignCommand>$(MSBuildProjectDirectory)\..\..\LazyStackCertificate\nuget sign -CertificateFingerprint $(SIGN_CERT_HASH) -Timestamper http://timestamp.digicert.com</NugetSignCommand>
   </PropertyGroup>
 
