--- a/LazyStackAuth/LazyStackAuth.csproj
+++ b/LazyStackAuth/LazyStackAuth.csproj
@@ -13,7 +13,7 @@
     <Company>Insight Sciences Corporation</Company>
     <Authors>Tim May, Thomas May</Authors>
     <SignAssembly>false</SignAssembly>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,14 +40,15 @@
   </ItemGroup>
   
   <!-- Note: The signing step will not execute if the CertPassword.csproj file doesn't exist and contain a non-empty SIGN_CERT_HASH string -->
-  <Import Project="..\..\LazyStackCertificate\CertPassword.csproj" Condition="'$(Configuration)' == 'Release' AND '$(SIGN_CERT_HASH)' != ''" />
+  <Import Project="..\..\LazyStackCertificate\CertPassword.csproj" Condition="'$(Configuration)' == 'Release'" />
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release' AND '$(SIGN_CERT_HASH)' != ''">
     <NugetSignCommand>$(MSBuildProjectDirectory)\..\..\LazyStackCertificate\nuget sign -CertificateFingerprint $(SIGN_CERT_HASH) -Timestamper http://timestamp.digicert.com</NugetSignCommand>
   </PropertyGroup>
 
+  
   <Target Name="SignPackage" AfterTargets="Pack" Condition="'$(Configuration)' == 'Release' AND '$(SIGN_CERT_HASH)' != ''">
-    <Message Importance="High" Text="hello" />
+    <Message Importance="High" Text="Signing Package" />
     <Message Importance="High" Text="PackageVersion $(Version)" />
     <Exec Command="$(NugetSignCommand) $(MSBuildProjectDirectory)\bin\Release\$(MSBuildProjectName).$(PackageVersion).nupkg" />
   </Target>
