--- a/LazyStackAuthTestReact/LazyStackAuthTestReact.csproj
+++ b/LazyStackAuthTestReact/LazyStackAuthTestReact.csproj
@@ -59,8 +59,11 @@
     </ItemGroup>
   </Target>
 
+  <!-- The aws-exports.js file contains the AWS Connection parameters for the LazyStackAuthTests stack.
+       You must deploy that stack and run the test suite to make the aws-exports.js file avaiilable. -->
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="copy ..\LazyStackAuthTests\bin\Debug\netcoreapp3.1\aws-exports.js .\ClientApp\src\aws-exports.js" />
+    <Exec Command="copy ..\LazyStackAuthTests\bin\Debug\netcoreapp3.1\aws-exports.js .\ClientApp\src\aws-exports.js" 
+          Condition="Exists('..\LazyStackAuthTests\bin\Debug\netcoreapp3.1\aws-exports.js')"/>
   </Target>
 
 </Project>
